--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="./src/assets/css/tiny-slider.css" />
-    <link rel="stylesheet" href="./src/assets/css/aos.css" />
+    <!-- <link rel="stylesheet" href="./src/assets/css/aos.css" /> -->
     <link rel="stylesheet" href="./src/assets/css/glightbox.min.css" />
     <link rel="stylesheet" href="./src/assets/css/style.css" />
     <link rel="stylesheet" href="./src/assets/css/flatpickr.min.css" />
